--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>--Tech Blog--</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-   <link rel="stylesheet" href="../../public/style.css" />
+  <link rel="stylesheet" href="/style.css"
+   
 </head>
 <body id="main">
    <div class="header">
@@ -12,7 +13,7 @@
       <nav>
         <ul>
           <li>
-            <button id="navBtn">Create</a>
+            <a id="navBtn">Create</a>
           </li>
           <li>
             <a id="navBtn" href="/blogs">Blogs</a>
