--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 </head>
 <body id="main">
    <div class="header">
-      <h1>Tech Talks</h1>
+      <a id="page-title" href="/">Tech Talks</a>
       <nav>
         <ul>
           <li>
