--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li>
-            <a id="navBtn">Create</a>
+            <a id="navBtn" href="/create">Create</a>
           </li>
           <li>
             <a id="navBtn" href="/blogs">Blogs</a>
